# pyef

./: .copier-answers.yml  .coverage-tmp.html  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  duties.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
changelog/: index.html
code_of_conduct/: index.html
config/: pytest.ini  ruff.toml
contributing/: index.html
credits/: index.html
license/: index.html
reference/: SUMMARY.txt
reference/pyef/: index.html
reference/pyef/_config/: index.html
reference/pyef/cli/: index.html
reference/pyef/combination/: index.html
reference/pyef/datasets/: index.html
reference/pyef/evaluator/: index.html
reference/pyef/forecaster/: index.html
reference/pyef/logger/: index.html
reference/pyef/timeframes/: index.html
scripts/: gen_credits.py  setup.sh
search/: search_index.json
src/pyef/: __init__.py  __main__.py  _config.py  cli.py  combination.py  datasets.py  evaluator.py  feature_explorer.py  forecaster.py  logger.py  schemas.py  timeframes.py  utils.py
src/pyef/data/bigdeal2022/final_match/: .~lock.Round 4.xlsx#  .~lock.Round 6.xlsx#  final_match.csv
src/pyef/data/bigdeal2022/qualifying_match/: data_round_1.csv
src/pyef/data/gefcom2012/wind/: Read Me First.txt  train.csv  windpowermeasurements.csv
tests/: __init__.py  conftest.py  test_cli.py  test_datasets.py  test_forecaster.py  test_timeframes.py
