[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[project]
name = "pyef"
description = "Energy Forecasting Toolkit in Python"
authors = [{name = "Bhav Sardana", email = "sardana.bhav@gmail.com"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"
keywords = []
dynamic = ["version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Documentation",
    "Topic :: Software Development",
    "Topic :: Software Development :: Documentation",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "numpy==1.24.0",
    "pandas>=1.5.2",
    "scikit-learn>=1.2.0",
    "optioneer>=1.0.3",
    "rich>=12.6.0",
    "patsy>=0.5.3",
    "memo>=0.2.3",
]

[project.urls]
Homepage = "https://sardanabhav.github.io/pyef"
Documentation = "https://sardanabhav.github.io/pyef"
Changelog = "https://sardanabhav.github.io/pyef/changelog"
Repository = "https://github.com/sardanabhav/pyef"
Issues = "https://github.com/sardanabhav/pyef/issues"
Discussions = "https://github.com/sardanabhav/pyef/discussions"
Gitter = "https://gitter.im/pyef/community"
Funding = "https://github.com/sponsors/sardanabhav"

[project.scripts]
pyef = "pyef.cli:main"

[project.optional-dependencies]
plot = [
    "plotly>=5.11.0",
    "matplotlib>=3.6.2",
]
[tool.pdm]
version = {source = "scm"}

[tool.pdm.build]
package-dir = "src"
editable-backend = "editables"

[tool.pdm.dev-dependencies]
duty = ["duty>=0.7"]
docs = [
    "mkdocs>=1.3",
    "mkdocs-coverage>=0.2",
    "mkdocs-gen-files>=0.3",
    "mkdocs-literate-nav>=0.4",
    "mkdocs-material>=7.3",
    "mkdocs-section-index>=0.3",
    "mkdocstrings[python]>=0.18",
    "markdown-callouts>=0.2",
    "markdown-exec>=0.5",
    "toml>=0.10",
]
format = [
    "autoflake>=1.4",
    "black>=21.10b0",
    "isort>=5.10",
]
maintain = [
    "git-changelog>=0.4",
    "twine>=4.0.2",
]
quality = [
    # TODO: remove once importlib-metadata version conflict is resolved
    #    "importlib-metadata<5; python_version < '3.8'",
    "flake8>=4; python_version >= '3.8'",
    "darglint>=1.8",
    "flake8-bandit>=2.1",
    "flake8-black>=0.2",
    "flake8-bugbear>=21.9",
    "flake8-builtins>=1.5",
    "flake8-comprehensions>=3.7",
    "flake8-docstrings>=1.6",
    "flake8-pytest-style>=1.5",
    "flake8-string-format>=0.3",
    "flake8-tidy-imports>=4.5",
    "flake8-variables-names>=0.0",
    "pep8-naming>=0.12",
    "wps-light>=0.15",
    "ruff>=0.0.254",
]
tests = [
    "pytest>=6.2",
    "pytest-cov>=3.0",
    "pytest-randomly>=3.10",
    "pytest-xdist>=2.4",
    "setuptools>=65.6.3",
    "pyinstrument>=4.4.0",
]
typing = [
    "mypy>=0.910",
    "types-markdown>=3.3",
    "types-toml>=0.10",
    "types-python-dateutil>=2.8.19.5",
    "types-setuptools>=65.6.0.2",
]
security = ["safety>=2"]
notebook = [
    "ipykernel>=6.19.4",
    "jupyter>=1.0.0",
]

[tool.black]
line-length = 88
exclude = "tests/fixtures"

[tool.isort]
line_length = 88
not_skip = "__init__.py"
multi_line_output = 3
force_single_line = false
balanced_wrapping = true
default_section = "THIRDPARTY"
known_first_party = "pyef"
include_trailing_comma = true

[tool.ruff]
# Decrease the maximum line length to 79 characters.
line-length = 88
# Support Python 3.10+.
target-version = "py310"
src = ["src", "tests"]

[tool.mypy]
files = ["src", "tests"]
show_error_codes = true
strict = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
disallow_untyped_decorators = false
exclude = "tests/fixtures/"
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["patsy", "optioneer", "memo", "pandas.*", "sklearn.*", "pytest"]
ignore_missing_imports = true
